k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyspaceship-deployment
spec:
  selector:
    matchLabels:
      app: pyspaceship
  replicas: 1
  template:
    metadata:
      labels:
        app: pyspaceship
    spec:
      containers:
      - name: pyspaceship
        image: {$eval: image}
        imagePullPolicy: "Always"
        livenessProbe:
          httpGet:
            path: /health
            port: 9876
        volumeMounts:
          - name: google-app-creds
            mountPath: /srv/pyspaceship/google-app-creds
      volumes:
        - name: google-app-creds
          secret:
            secretName: google-app-creds
