k8s/web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyspaceship-web-deployment
  labels:
    app: pyspaceship
spec:
  selector:
    matchLabels:
      app: pyspaceship
      component: web
  replicas: {$eval: replicas}
  template:
    metadata:
      labels:
        app: pyspaceship
        component: web
    spec:
      containers:
      - name: pyspaceship-web
        image: {$eval: image}
        args: ["run.gunicorn"]
        imagePullPolicy: "Always"
        env: {$eval: container_environment}
        livenessProbe:
          httpGet:
            path: /health
            port: 9876
            httpHeaders:
              - name: Host
                value: "${namespace}.spaceshipearth.org"
        volumeMounts:
          - name: google-app-creds
            mountPath: /srv/pyspaceship/google-app-creds
      volumes:
        - name: google-app-creds
          secret:
            secretName: google-app-creds
